# beu

./: SKILL.md  go.mod  go.sum
.github/workflows/: ci.yml  nightly.yml
beu-skills/: README.md  package.json
beu-skills/skills/: beu.md
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/commands/: debug.md  init.md  journal.md  pause.md  progress.md  resume.md  state.md  status.md  task.md
claude-plugin/skills/beu/: README.md  SKILL.md
docs/: TOOL_COMPARISON.md  architecture.md  code-quality-findings.md  codelab.md  comparison.md  todos.md
integrations/beads-mcp/: pyproject.toml
scripts/: install-hooks  pre-commit
src/: config.rs  main.rs  rules.rs  store.rs  time_helper.rs
src/cmd/: artifact.rs  debug.rs  idea.rs  journal.rs  mod.rs  project.rs  state.rs  system.rs  task.rs  testing.rs
src/sqlite/: artifact.rs  debug.rs  event_log.rs  idea.rs  journal.rs  project.rs  state.rs
tests/: cli_idea.rs  cli_state.rs  cli_system.rs  cli_task.rs  cli_workflows.rs
tests/common/: mod.rs
tools/bea/: CLAUDE.md  Cargo.toml
tools/bea/bea-host/: Cargo.toml
tools/bea/bea-host/src/: db.rs  host_functions.rs  lib.rs  main.rs  plugin_manager.rs  skill.rs
tools/bea/bea-host/tests/: cli.rs  integration.rs
tools/bea/bea-sdk/: Cargo.toml
tools/bea/docs/: architecture.md  tasks.md
tools/beu/: Cargo.toml  README.md
tools/beu/docs/: code-quality-findings.md
tools/beu/src/: main.rs  rules.rs  store.rs  time_helper.rs
tools/beu/tests/: cli_artifact.rs  cli_debug.rs  cli_journal.rs  cli_project.rs  cli_project_scoping.rs  cli_testing.rs
(+24 files in other folders)
