[package]
name = "bea-host"
version = "0.1.0"
edition = "2021"
description = "The bea CLI host - a universal sandboxed Wasm plugin runtime"

[lib]
name = "bea_host"
path = "src/lib.rs"

[[bin]]
name = "bea"
path = "src/main.rs"

[dependencies]
bea-sdk = { path = "../bea-sdk" }
extism = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
